# Automated-pipeline-for-pick-place-custom-objects-using-UR5-Robotiq-gripper-and-ZED-stereo-camera

./: README.md  ros-humble-ur_2.2.15-1jammy.20241007.233639_amd64.deb
.github/: FUNDING.yml
detection_publisher_1/src/detection_publisher/: package.xml  setup.cfg  setup.py
detection_publisher_1/src/detection_publisher/detection_publisher/: move_group_publisher.py
detection_publishers/src/detection_publishers/detection_publishers/: manual_detection_publisher.py
detection_recievers/detection_recievers/src/: move_group_reciever.cpp
legacy_backup/: readme.md  ros-humble-ros-workspace_1.0.2-2jammy.20240728.191004_amd64.deb  ros-humble-ur-calibration_2.2.15-1jammy.20241007.214215_amd64.deb  ros-humble-ur-controllers_2.2.15-1jammy.20241007.213304_amd64.deb  ros-humble-ur-dashboard-msgs_2.2.15-1jammy.20240728.211906_amd64.deb  ros-humble-ur-moveit-config_2.2.15-1jammy.20241007.233524_amd64.deb  ros-humble-ur-robot-driver_2.2.15-1jammy.20241007.213606_amd64.deb  ros-humble-ur_2.2.15-1jammy.20241007.233639_amd64.deb
moving_robot/moving_ur5/: CMakeLists.txt  package.xml
moving_robot/moving_ur5/src/: DataCollectionReciever.cpp  move_group_reciever.cpp
ros_ur_driver/Universal_Robots_ROS2_Description/urdf/: ur.urdf.xacro  ur_macro.xacro
ros_ur_driver/Universal_Robots_ROS2_Driver/ur_moveit_config/: package.xml
ros_ur_driver/Universal_Robots_ROS2_Driver/ur_moveit_config/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
ros_ur_driver/Universal_Robots_ROS2_Driver/ur_moveit_config/launch/: ur_moveit.launch.py
(+1 files in other folders)
